robot assisted java warnings cleanup